<resources>
    <string name="app_name">Hiring</string>
    <string name="popular_movies">Popular</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="favorite_movies">Favorite</string>
    <string name="account_movies">Account</string>
    <string name="movie_details">Movie details</string>
    <string name="movie_search">Search Movie</string>

    <string name="visit_website">Visit website</string>

    <string name="no_release_date">No release date</string>
    <string name="no_ratings">No ratings</string>
    <string name="no_data_na">N/A</string>

    <!-- Patterns -->
    <string name="runtime_pattern_single">%s hour and %s minutes</string>
    <string name="runtime_pattern_multiple">%s hours and %s minutes</string>
    <string name="votes_pattern">%s votes</string>
    <string name="revenue_pattern" translatable="false">%s mill.</string>
    <string name="movie_row_desc_pattern" translatable="false">%s\u0020\u0020&#8226;\u0020\u0020%s</string>
    <string name="visit_website_url_pattern" translatable="false"><![CDATA[<a href="%s">%s</a>]]></string>
    <string name="error_message_pattern">Error: %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="you_must_be_logged_in_to_see_the_profile">You must be logged in to see the profile and use additional features.</string>
    <string name="you_must_be_logged_in_to_use_list_features">You must be logged in to use lists feature.</string>

    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="rated_movies">My Ratings</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>

    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_re_about_to_sign_out_of_your_account">You’re about to sign out of your account.</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Sign Out</string>


    <string name="all">Tất cả</string>
    <string name="tag_1">Công nghệ thông tin</string>
    <string name="tag_2">Kế toán &amp; Tài chính</string>
    <string name="tag_3">Giáo dục</string>
    <string name="tag_4">Digital Marketing</string>
    <string name="tag_5">Viễn thông</string>
    <string name="tag_6">Sale &amp; Marketing</string>
    <string name="tag_7">Viết &amp; Dịch</string>
    <string name="tag_8">Sức khỏe</string>
    <string name="tag_9">Vận tải &amp; Logistic</string>
    <string name="tag_10">Xây dựng</string>
    <string name="tag_11">Dệt may</string>
    <string name="tag_12">Khác</string>

    <string name="list">Danh sách</string>
    <string name="_1_n_m"><![CDATA[< 1 Năm]]></string>

    <string-array name="Type">
        <item>Full time</item>
        <item>Part time</item>
        <item>Freelance</item>
    </string-array>
    <string-array name="Tag">
        <item>Công nghệ thông tin</item>
        <item>Kế toán &amp; Tài chính</item>
        <item>Giáo dục</item>
        <item>Digital Marketing</item>
        <item>Viễn thông</item>
        <item>Sale &amp; Marketing</item>
        <item>Viết &amp; Dịch</item>
        <item>Sức khỏe</item>
        <item>Vận tải &amp; Logistic</item>
        <item>Xây dựng</item>
        <item>Dệt may</item>
        <item>Khác</item>
    </string-array>
    <string-array name="Gen">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string-array name="Quality">
        <item>Tốt nghiệm THPT</item>
        <item>Tốt nghiệp Đại học, Cao đẳng hoặc tương đương</item>
        <item>Thạc sĩ</item>
        <item>Tiến sĩ</item>
        <item>Khác</item>
    </string-array>
    <string-array name="Exp">
        <item><![CDATA[< 1 Năm]]></item>
        <item>Từ 1 – 2 năm</item>
        <item>Từ 2 – 3 năm</item>
        <item>Trên 3 năm</item>

    </string-array>

    <string-array name="status">
        <item>viewed</item>
        <item>interested</item>
        <item>interviewed</item>
        <item>rejected</item>
        <item>accepted</item>
    </string-array>
</resources>
